--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: imtx的博客
-subtitle: imtx的博客
-description: imtx的博客
+title: imtangx的博客
+subtitle: imtangx的博客
+description: imtangx的博客
 keywords: 博客，笔记
 author: Garden Hamster
 language: zh-CN
